# shopify-bulk

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: quickstart.md
shopify_jsonl/: __init__.py  __main__.py  cli.py  expander.py  exporter.py  fetcher.py  parser.py  queries.py  types.py
shopify_jsonl/configs/: __init__.py  inventory.yaml  orders.yaml  products.yaml
tests/: test_expander.py  test_parser.py
tests/fixtures/: sample_products.jsonl
